# echelle_spectra

./: .gitignore  .main.py.swp  LICENSE  MANIFEST.in  README.md  band_data.html  header_template.txt  index.html  main.py  path_datafolder.txt  path_output.txt  pyproject.toml  requirements.txt  start.bat  startup_options.txt  style.css
calibration_files/: absolute_20170613_b8_0.2_bkg.sif  pattern.txt
examples/: 1.1_Cutting_Pattern_Synthetic.ipynb  1.2_Cutting_Pattern_Masks.ipynb  2.1_Cutting_Pattern_FE.ipynb  2.2_Cutting_Pattern_NihamaPlus.ipynb  3.1_loading_images.ipynb  3.3_Wavelength_Calibration.ipynb  3.4_Wavelength_echelle_spectra copy.ipynb  4.1_Load_bkack_echelle copy.ipynb  4.1_Load_bkack_echelle.ipynb  4.2_Pattern_LHD.ipynb  4.3_Wavelength_Calibration_LHD.ipynb  5.0_Bands.ipynb  pattern.txt  pattern_fujii_rot.txt  testtool-CCD.ipynb  testtool-CMOS.ipynb
gui/: mainwindow.py
jupyternotebooks/: testtool-CCD.ipynb  testtool-CMOS.ipynb
src/echelle_spectra/: __init__.py  __main__.py  echelle_spectra.py  echelle_spectra_gui.py
src/echelle_spectra/examples/: 1.1_Cutting_Pattern_Synthetic.ipynb  1.2_Cutting_Pattern_Masks.ipynb  2.2_Cutting_Pattern_NihamaPlus.ipynb  3.2_try_load_new_echelle copy.ipynb  3.2_try_load_new_echelle.ipynb  3.3_Wavelength_Calibration.ipynb  3.4_Wavelength_echelle_spectra copy.ipynb  3.5_Load_Black_Echelle.ipynb  pattern.txt  pattern_fujii.txt  testtool-CMOS.ipynb
src/echelle_spectra/resources/: defaults.toml  header_template.txt  wavelength_fujii.txt  window_layout.py
src/echelle_spectra/tools/: config_loader.py  echelle.py  emissionbands.py  emissiondata.py  note.txt
tools/: echelle.py  echelle.py.backup  emissionbands.py
(+11 files in other folders)
