[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "echelle_spectra"
version = "0.0.1"
description = "Graphical tool for the extraction and analysis of calibrated spectra from 2D Echelle spectrometer images"
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
authors = [
  { name="Kuzmin Arseniy Aleksandrovich", email="arseniy.a.kuzmin@gmail.com" },
  { name="Alexander Liptak", email="alexadner.liptak.jr@googlemail.com"},
]
keywords = ["Echelle", "echelle", "spectra", "spectrum", "spectrometer", "image", "calibration", "calibrated",
            "analysis", "fitting", "GUI", "UI"]
dependencies = [
    "lmfit >= 1.0.3",
    "matplotlib >= 3.5.2",
    "numpy >= 1.23.1",
    "pyqt5 >= 5.15.7",
    "pyqtgraph >= 0.12.4",
    "scipy >= 1.8.1",
    "sif_parser >= 0.3.0",
    "tomli >= 2.0.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Framework :: Jupyter",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
dev = ["black", "jupyter", "peakutils", "PyQt5-stubs", "twine"]

[project.urls]
"Homepage" = "https://github.com/queezz/echelle_spectra"
"Bug Tracker" = "https://github.com/queezz/echelle_spectra/issues"

[project.scripts]
echelle_spectra = "echelle_spectra.echelle_spectra_gui:start"
